# reinhardt-blog-demo

./: .gitignore  CLAUDE.md
.demo/: demo.yaml
.demo/scripts/: warmup_cargo.sh
fullstack_demo/: Cargo.toml  README.md  build.rs  index.html
fullstack_demo/migrations/posts/: 0001_initial.rs
fullstack_demo/settings/: base.example.toml  base.toml  local.example.toml  local.toml  production.example.toml  production.toml  staging.example.toml  staging.toml
fullstack_demo/src/: apps.rs  client.rs  config.rs  lib.rs  server_fn.rs  shared.rs
fullstack_demo/src/apps/: posts.rs  users.rs
fullstack_demo/src/apps/posts/: admin.rs  client.rs  models.rs  repositories.rs  serializers.rs  server.rs  shared.rs  tests.rs  urls.rs  views.rs
fullstack_demo/src/apps/posts/client/: components.rs
fullstack_demo/src/apps/posts/migrations/: 0001_initial.rs
fullstack_demo/src/apps/posts/server/: server_fn.rs
fullstack_demo/src/apps/posts/shared/: errors.rs  types.rs
fullstack_demo/src/apps/posts/urls/: client_urls.rs  server_urls.rs  ws_urls.rs
fullstack_demo/src/apps/users/: admin.rs  client.rs  models.rs  serializers.rs  server.rs  shared.rs  tests.rs  urls.rs  views.rs
fullstack_demo/src/apps/users/client/: components.rs
fullstack_demo/src/client/: bootstrap.rs  pages.rs  router.rs
fullstack_demo/src/client/pages/: mod.rs  posts_page.rs
fullstack_demo/src/config/: apps.rs  settings.rs  urls.rs
fullstack_demo/src/server/: server_fn.rs
fullstack_demo/src/server_fn/: posts.rs
fullstack_demo/src/shared/: types.rs
polls_project/: Cargo.toml  README.md  build.rs  index.html
polls_project/settings/: base.example.toml  local.example.toml  production.example.toml  staging.example.toml
polls_project/src/config/: wasm.rs
polls_project/src/server_fn/: polls.rs
source/: .gitignore  conte.md  manim.ipynb  moviepy.ipynb  narrator.ipynb  pyproject.toml
source/audio/: narrator_cache.yaml
(+6 files in other folders)
