[package]
name = "polls_project"
version = "0.1.0"
edition = "2024"
default-run = "manage"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for server

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
# Common dependencies (both WASM and server)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# WASM-specific dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
reinhardt = { version = "0.1.0-rc.21", package = "reinhardt-web", default-features = false, features = [
	"pages",
	"client-router",
] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
	"Window",
	"Document",
	"Element",
	"HtmlFormElement",
	"HtmlInputElement",
	"Event",
	"EventTarget",
] }
console_error_panic_hook = "0.1"
gloo-net = "0.6"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v7", "js"] }

# Server-specific dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
reinhardt = { version = "0.1.0-rc.21", package = "reinhardt-web", features = [
	"full",
	"pages",
	"conf",
	"commands",
	"db-sqlite",
	"forms",
	"client-router",
	"admin",
] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
anyhow = "1"
ctor = "0.6.1"
inventory = "0.3"
linkme = "0.3"

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
serial_test = "3.2"
tokio = { version = "1.48.0", features = ["rt", "macros"] }

[dev-dependencies.reinhardt]
version = "0.1.0-rc.21"
package = "reinhardt-web"
features = ["test"]

[build-dependencies]
cfg_aliases = "0.2"
